--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 github:[kolumnin, kolumnin.com, kolumnin-com]
-       [https://www.paypal.me/kolumnin]
+       [https://www.paypal.me/kolumnin, kolumnin-com]
